--- a/.github/workflows/virus.yml
+++ b/.github/workflows/virus.yml
@@ -13,6 +13,7 @@ jobs:
         uses: crazy-max/ghaction-virustotal@v2
         with:
           vt_api_key: ${{ secrets.VT_API_KEY }}
+          update_release_body: true
           files: |
             .msi$
             .exe$
